<resources>
    <string name="app_name">D-studioTestApp</string>
    <string name="registration_successful">Registration successful! Token: </string>
    <string name="loginization_successful">Loginization successful! Token: </string>
    <string name="registration_failed">Registration error! Reason: </string>
    <string name="provide_needed_data">Please, provide needed data!</string>
    <string name="username_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="logout_button_text">Logout</string>
    <string name="havent_account_yet">Havent account yet? Register</string>
    <string name="getting_data_from_database">Getting data from database!</string>
    <string name="activity_inside_username_column_text">Username</string>
    <string name="activity_inside_last_login_column_text">Last login</string>
</resources>
