<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/edtxtUsername_FR"
        style="@style/texts.edittext"
        android:hint="@string/username_hint"
        />

    <EditText
        android:id="@+id/edtxtPassword_FR"
        style="@style/texts.edittext"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/edtxtEmail_FR"
        style="@style/texts.edittext"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        />

    <Button
        android:id="@+id/buttRegisterUser_FR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        style="@style/buttons"
        android:background="@drawable/register_button"
        android:text="@string/register_button_text"
        />

</LinearLayout>