<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/edtxtUsername_FL"
        style="@style/texts.edittext"
        android:hint="@string/username_hint"
        />

    <EditText
        android:id="@+id/edtxtPassword_FL"
        style="@style/texts.edittext"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/buttLogin_FL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        style="@style/buttons"
        android:background="@drawable/login_button"
        android:text="@string/login_button_text"
        />

    <TextView
        android:id="@+id/txtGoToRegister_FL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:text="@string/havent_account_yet"
        android:clickable="true"
        />

</LinearLayout>